layout_words_creation.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
                            'src/main/res/res-global',
                            'src/main/res/res-global/res-mipmap',
                            'src/main/res/res-global/res-drawable',
+                           'src/main/res/res-global/res-drawable/states',
                            'src/main/res/res-global/res-values',
                            'src/main/res/res-global/res-layout',
                            'src/main/res/screens',
