--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 //Safe-Args
 apply plugin: "androidx.navigation.safeargs"
+// BindingAdapter
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
