--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,11 @@ dependencies {
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //Coroutine
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     //Compat
     implementation 'androidx.appcompat:appcompat:1.2.0'
     //Tests
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Navigation
@@ -67,7 +67,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recycler_version"
     //ConstraintLayout
     //2.0.1 - does not work [MotionScene : autoTransition]
-    def constraintLayout_version = "2.0.0-beta6"
+    def constraintLayout_version = '2.0.2'
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout_version"
     //CardView
     implementation "androidx.cardview:cardview:1.0.0"
