--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        //Safe-Args
+        // Safe-Args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        // Google-Services
+        classpath 'com.google.gms:google-services:4.3.4'
 
     }
 }
