--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     // ViewModel
     def view_model = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$view_model"
+    //Lottie
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Firebase ===============================
     // BoM
