--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
                            'src/main/res/screens',
                            'src/main/res/screens/main',
                            'src/main/res/screens/start',
+                           'src/main/res/screens/start/include_components',
                            'src/main/res/screens/dictionary',
                            'src/main/res/screens/dictionary/include_components',
                            'src/main/res/screens/authentication',
