--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,8 +83,14 @@ dependencies {
     // Lottie
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    // Room
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // Gson
+    def gson_version = "2.8.5"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     // Firebase ===============================
     // BoM
