--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.veldan.askword_us"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,12 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     sourceSets {
         main {
             res.srcDirs = ['src/main/res',
@@ -81,16 +87,21 @@ dependencies {
     def view_model = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$view_model"
     // Lottie
-    def lottieVersion = "3.4.0"
+    def lottieVersion = '3.6.0'
     implementation "com.airbnb.android:lottie:$lottieVersion"
     // Room
-    def room_version = "2.2.5"
+    def room_version = '2.2.6'
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     // Gson
-    def gson_version = "2.8.5"
+    def gson_version = '2.8.6'
     implementation "com.google.code.gson:gson:$gson_version"
+    // Camera X
+    def camerax_version = '1.0.0-rc01'
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha20"
 
     // Firebase ===============================
     // BoM
