--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,9 @@ dependencies {
     def camerax_version = '1.0.0-rc01'
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha20"
+    implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    def glide_version = '4.6.1'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // Firebase ===============================
     // BoM
