--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,8 +102,12 @@ dependencies {
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    // Glide
     def glide_version = '4.6.1'
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    // CircleImageView
+    def circle_image_version = '3.1.0'
+    implementation "de.hdodenhof:circleimageview:$circle_image_version"
 
     // Firebase ===============================
     // BoM
