--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
                            'src/main/res/res-global/res-values',
                            'src/main/res/res-global/res-layout',
                            'src/main/res/screens',
+                           'src/main/res/screens/study',
                            'src/main/res/screens/main',
                            'src/main/res/screens/start',
                            'src/main/res/screens/dictionary_or_study',
@@ -69,6 +70,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     // Compat
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // Tests
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
