StudyFragment.kt StudyingFragment.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ android {
                            'src/main/res/res-global/res-values',
                            'src/main/res/res-global/res-layout',
                            'src/main/res/screens',
+                           'src/main/res/screens/study_format',
                            'src/main/res/screens/study',
+                           'src/main/res/screens/studying',
                            'src/main/res/screens/main',
                            'src/main/res/screens/start',
                            'src/main/res/screens/dictionary_or_study',
